# flutter_webp

./: .env  .metadata  LICENSE  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
lib/: flutter_webp.dart  flutter_webp_method_channel.dart  flutter_webp_platform_interface.dart  webp_encode.dart
linux/: CMakeLists.txt  flutter_webp_plugin.cc  flutter_webp_plugin_private.h
linux/include/flutter_webp/: flutter_webp_plugin.h
linux/libs/: libwebp.so.7.2.0
linux/test/: flutter_webp_plugin_test.cc
test/: flutter_webp_method_channel_test.dart  flutter_webp_test.dart
